Fix button alignment

--- a/envergo/static/sass/project.scss
+++ b/envergo/static/sass/project.scss
@@ -1274,6 +1274,7 @@ footer {
 
   .banner-item {
     flex: 0 1 auto;
+    text-align: left;
   }
 
   #feedback-form {
